# financial-rag-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  logging_config.py  main.py
app/embeddings/: embedding_benchmark.py  hf_embeddings.py
app/evaluation/: answer_eval.py  eval_runner.py  faithfulness_eval.py  retrieval_eval.py  test_cases.py
app/ingestion/: cleaner.py  edgar_client.py  loaders.py  metadata_builder.py  parser.py
app/llm/: __init__.py  factory.py  response_utils.py
app/processing/: chunker.py  doc_registry.py  section_splitter.py
app/rag/: chains.py  citation_formatter.py  memo_generator.py  prompts.py  structured_outputs.py
app/services/: ingestion_service.py  memo_service.py  query_service.py
app/ui/: components.py  gradio_app.py  state.py
app/utils/: date_utils.py  file_io.py  json_utils.py  text_utils.py
app/vectorstore/: chroma_store.py  filters.py  retriever.py
data/eval/: gold_answers.json  questions.json  (+1 more)
notebooks/: 01_edgar_exploration.ipynb  02_chunking_experiments.ipynb  03_embedding_benchmark.ipynb  04_eval_analysis.ipynb
scripts/: build_corpus.py  build_index.py  download_filings.py  run_eval.py  seed_eval_set.py
tests/: _eval_aggregate_fix.py  conftest.py  test_chains.py  test_chunking.py  test_embeddings.py  test_evaluation.py  test_ingestion.py  test_llm_factory.py  test_memo_generation.py  test_response_utils.py  test_retrieval.py  test_services.py  test_structured_output.py  test_ui_eval.py  test_utils.py
(+7 files in other folders)
